add module-info.java and update pom.xml for JavaFX dependencies; change print statement in Main.java